[gd_scene load_steps=17 format=3 uid="uid://djpl1nd6y73jy"]

[ext_resource type="Script" path="res://Scenes/skeleton.gd" id="1_hbfqs"]
[ext_resource type="Texture2D" uid="uid://byc3geslqx04t" path="res://EnemySprites/Skeleton enemy.png" id="1_vdk23"]
[ext_resource type="Script" path="res://FSM/finite_state_machine.gd" id="3_fbwtr"]
[ext_resource type="Script" path="res://Scenes/Follow.gd" id="4_c181t"]
[ext_resource type="Script" path="res://Scenes/AttackSkeleton.gd" id="5_rvy54"]
[ext_resource type="Script" path="res://Scenes/DeathSkeleton.gd" id="6_8c6wm"]
[ext_resource type="Script" path="res://Scenes/Stagger2.gd" id="7_jcot6"]

[sub_resource type="Animation" id="Animation_mmj73"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fqp52"]
resource_name = "attack"
length = 1.62501
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.625, 0.75, 1.125, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_a4o5j"]
resource_name = "death"
length = 1.62501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.625),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_7cr2h"]
resource_name = "follow"
length = 1.50001
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37]
}

[sub_resource type="Animation" id="Animation_snj6v"]
resource_name = "idle"
length = 0.500013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [39, 40, 41, 42]
}

[sub_resource type="Animation" id="Animation_5tdnd"]
resource_name = "stagger"
length = 0.375012
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [52, 53, 54]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uyal5"]
_data = {
"RESET": SubResource("Animation_mmj73"),
"attack": SubResource("Animation_fqp52"),
"death": SubResource("Animation_a4o5j"),
"follow": SubResource("Animation_7cr2h"),
"idle": SubResource("Animation_snj6v"),
"stagger": SubResource("Animation_5tdnd")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hslsn"]
radius = 9.0
height = 34.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8fid"]
size = Vector2(23, 34)

[node name="skeleton" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_hbfqs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_vdk23")
hframes = 13
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uyal5")
}

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(100, 0)
offset_left = -11.0
offset_top = -27.0
offset_right = 89.0
scale = Vector2(0.243331, 0.200335)
max_value = 30.0
value = 30.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.72, 1)
shape = SubResource("CapsuleShape2D_hslsn")

[node name="debug" type="Label" parent="."]
visible = false
offset_left = -18.0
offset_top = -44.0
offset_right = 22.0
offset_bottom = -21.0
theme_override_font_sizes/font_size = 8
text = "debug
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("3_fbwtr")

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("4_c181t")

[node name="AttackSkeleton" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("5_rvy54")

[node name="DeathSkeleton" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("6_8c6wm")

[node name="Stagger2" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_jcot6")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(17.5, -6)
shape = SubResource("RectangleShape2D_i8fid")
disabled = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_skeleton_body_entered"]
